K8/Yaml/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-prod-ingress
  namespace: prod-web
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - k8astro
    secretName: nginx-selfsigned-tls
  rules:
  - host: k8astro
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80
